--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* sdjhdsjkfjsd */
 /* Optional: browser theme handling for dark mode */
 @layer base {
   html.dark {
